4.0.0
=====
12 October 2024
- Introduce Gwen processes to support multiple launch configurations
  - `-p|--process` option
- Require Java 17+ instead of Java 11+
  - With GraalVM instead of Nashorn for JS evaluation
- Use logback-classic instead of log4j for logging
- Remove deprecated features
  - Gwen Workspaces warning
  - `-p|--properties` option
  - Report portal integration
- Raise deprecations as errors by default instead of logged them as warnings
  | Setting                     | Old default | New default |
  | :-------------------------- | :---------: | :---------: |
  | `gwen.logLevel.deprecations`|   `warn`    |   `error`   |
- | Deprecated Settings          | Use this instead               |
  | :--------------------------- | :----------------------------- |
  | `gwen.cli.options.batch`     | `gwen.launch.options.batch`    |
  | `gwen.cli.options.format`    | `gwen.launch.options.format`   |
  | `gwen.cli.options.inputData` | `gwen.launch.options.inputData`|
  | `gwen.cli.options.dryRun`    | `gwen.launch.options.dryRun`   |
  | `gwen.cli.options.features`  | `gwen.launch.options.features` |
  | `gwen.cli.options.parallel`  | `gwen.launch.options.parallel` |
  | `gwen.cli.options.meta`      | `gwen.launch.options.meta`     |
  | `gwen.cli.options.report`    | `gwen.launch.options.report`   |
  | `gwen.cli.options.tags`      | `gwen.launch.options.tags`     |
- | Deprecated Implicit values            | Use this instead                              |
  | :------------------------------------ | :-------------------------------------------- |
  | `gwen.eval.status.keyword`            | `gwen.feature.eval.status.keyword`            |
  | `gwen.eval.status.keyword.upperCased` | `gwen.feature.eval.status.keyword.upperCased` |
  | `gwen.eval.status.keyword.lowerCased` | `gwen.feature.eval.status.keyword.lowerCased` |
  | `gwen.eval.status.keyword.isPassed`   | `gwen.feature.eval.status.keyword.isPassed`   |